--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -24,7 +24,6 @@ concurrency:
 defaults:
   run:
     shell: bash
-    working-directory: /src
 
 jobs:
   # Build job
@@ -53,6 +52,7 @@ jobs:
           # For maximum backward compatibility with Hugo modules
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
+        working-directory: ./src
         run: |
           hugo \
             --minify \
